--- a/Default.html
+++ b/Default.html
@@ -29,9 +29,9 @@
             </div>
 
             <section class="glance-box">
-                <!--<h2>At a glance...</h2>-->
+            
                 <ul class="list-unstyled">
-                    <li>50+ (and more to come) relevant indicators, custom made to fit your business model: marketplace or subscription based (SaaS, IaaS, PaaS etc)</li>
+                    <li>50+ (and more to come) relevant indicators, custom made to fit your business model: marketplace or subscription based (SaaS, IaaS, PaaS, BaaS etc)</li>
                     <li>Bubeat integrates with your backend and this means it works with <i>any</i> payment processor you're using, <i>any</i> number of them. The more, the merrier! </li>
                     <li>Multi-currency support, <i>any</i> real or virtual currency. Yes, cupcakes are valid, too!</li>
                     <li>Painless, trivial integration using the open source Api Client ( .Net, php, ruby)</li>
@@ -58,7 +58,7 @@
                 <div id="mc_embed_signup">
                     <form action="//bubeat.us10.list-manage.com/subscribe/post?u=8226b76f393681b072c2918c8&amp;id=153568b568" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
-                            <h2>The Empire needs you! <br/>Join now the Bubeat newsletter!</h2>
+                            <h2>The Empire needs you! <br/>Subscribe now to our newsletter!</h2>
                             
                             <div class="form-group">
                                 <label for="mce-EMAIL" class="control-label">
