--- a/Default.html
+++ b/Default.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <meta name="description" content="Real-Time Business Analytics for Marketplaces and SaaS (Iaas,PaaS etc). Works with any payment processor including Stripe, PayPal, Braintree, Square , 2Checkout etc"/>
+    <meta name="description" content="Real-Time Business Metrics for Marketplaces and SaaS (Iaas,PaaS etc). Works with any payment processor including Stripe, PayPal, Braintree, Square , 2Checkout etc"/>
 </head>
 <body>
 <div class="container-fluid">
@@ -61,7 +61,7 @@
 
             <section class="glance-box">
                 <ul class="list-unstyled">
-                    <li>Make more informed decisions with 50+ (and more to come) relevant indicators, custom made to fit your business model: marketplace or subscription based (SaaS, IaaS, PaaS, BaaS etc)</li>
+                    <li>Make more informed decisions with 50+ (and more to come) relevant indicators, custom made to fit your business model: Marketplace or Subscription based (SaaS, IaaS, PaaS, BaaS etc)</li>
                     <li>Are you using more than one payment processor (gateway)? The more, the merrier! Bubeat enables you to see which is more costly or which is preferred by your users</li>
                     <li>Multi-currency support for <i>any</i> real or virtual currency. Dollars, euros, bitcoin, martian credits... you name it! Yes, cupcakes are valid, too!</li>
                     <li>Painless, trivial integration using the open source Api Client ( .Net, php, ruby)</li>
