--- a/Default.html
+++ b/Default.html
@@ -17,7 +17,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bubeat-all-menu">
                 <span class="sr-only">Toggle navigation</span>
                 <div class="mobile-title">
-                    Bubeat <span>aka. Business Beat</span>
+                    <i class="bu bu-textlogo"></i>
                 </div>
                 </button>
         </div>
@@ -25,7 +25,7 @@
             <ul class="nav navbar-nav">
                 <li><a class="title" href="http://www.bubeat.com">
                     <div class="hidden-xs hidden-sm">
-                            Bubeat <span>aka. Business Beat</span>
+                        <i class="bu bu-textlogo"></i>
                         </div>
                     <em class="visible-xs-inline visible-sm-inline">Home</em>
                 </a></li>
