updated blog address

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </div>
                     <em class="visible-xs-inline visible-sm-inline">Home</em>
                 </a></li>
-                <li><a href="http://blog.bubeat.com">Blog</a></li>
+                <li><a href="http://bubeat.com/blog">Blog</a></li>
                 <li class="twitter"><a href="https://twitter.com/bubeatapp"><i class="fa fa-twitter"></i><span>@bubeatapp</span></a></li>
             </ul>
         
