--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Bubeat | Real-Time Business Analytics For SaaS and Marketplaces</title>
 	<link rel="shortcut icon" href="favicon.ico">
+	<meta name="google-site-verification" content="7_weuo0tTNU0yxphLlz5ghAtvpiLlgiQsOwPfFQNO6c" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -145,5 +146,15 @@
     &copy; 2015 Bubeat | Made in Canada
     <!--<address> supp<span>or</span><span class="hide">@ju</span>t@b<span class="hide">huy</span><span>ubea</span>t.com</address>-->
 </footer>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-61924081-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
