--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-61924081-1', 'auto');
+  ga('require', 'linkid', 'linkid.js');
   ga('send', 'pageview');
 
 </script>
