added serial entrepreneur advantage

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                     <li>Make more informed decisions with 50+ (and more to come) relevant indicators, custom made to fit your business model: Marketplace or Subscription based (SaaS, IaaS, PaaS, BaaS etc)</li>
                     <li>Are you using more than one payment processor (gateway)? The more, the merrier! Bubeat enables you to see which is more costly or which is preferred by your users</li>
                     <li>Multi-currency support for <i>any</i> real or virtual currency. Dollars, euros, bitcoin, martian credits... you name it! Yes, cupcakes are valid, too!</li>
+					<li>Perfect for serial entrepreneurs, you can follow all your businesses' metrics with one account </li>
                     <li>Painless, trivial integration using the open source Api Client ( .Net, php, ruby)</li>
                 </ul>
             </section>
