--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="style.css">
     <meta name="description" content="Real-Time Business Metrics for Marketplaces and SaaS (Iaas,PaaS etc). Works with any payment processor including Stripe, PayPal, Braintree, Square , 2Checkout etc"/>
 	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  //(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  //(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  //m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  //})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-61924081-1', 'auto');
-  ga('require', 'linkid', 'linkid.js');
-  ga('send', 'pageview');
+  //ga('create', 'UA-61924081-1', 'auto');
+  //ga('require', 'linkid', 'linkid.js');
+  //ga('send', 'pageview');
 
 </script>
 </head>
@@ -74,8 +74,9 @@
 
             <section class="glance-box">
                 <ul class="list-unstyled">
+                    <li>Payment Processor independent. It doesn't matter what or how many payment processors/gateways your app is using. The more, the merrier! Bubeat enables you to see which is more costly or which is preferred by your users</li>
                     <li>Make more informed decisions with 50+ (and more to come) relevant indicators, custom made to fit your business model: Marketplace or Subscription based (SaaS, IaaS, PaaS, BaaS etc)</li>
-                    <li>Are you using more than one payment processor (gateway)? The more, the merrier! Bubeat enables you to see which is more costly or which is preferred by your users</li>
+                    
                     <li>Multi-currency support for <i>any</i> real or virtual currency. Dollars, euros, bitcoin, martian credits... you name it! Yes, cupcakes are valid, too!</li>
 					<li>Perfect for serial entrepreneurs, you can follow all your businesses' metrics with one account </li>
                     <li>Painless, trivial integration using the open source Api Client ( .Net, php, ruby)</li>
