--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <section class="glance-box">
                 <ul class="list-unstyled">
-                    <li>Payment Processor independent. It doesn't matter what or how many payment processors/gateways your app is using. The more, the merrier! Bubeat enables you to see which is more costly or which is preferred by your users</li>
+                    <li>Payment Processor independent. It doesn't matter what or how many payment processors/gateways your app is using. Stripe, PayPal, Braintree ... the more, the merrier! Bubeat enables you to see which is more costly or which is preferred by your users</li>
                     <li>Make more informed decisions with 50+ (and more to come) relevant indicators, custom made to fit your business model: Marketplace or Subscription based (SaaS, IaaS, PaaS, BaaS etc)</li>
                     
                     <li>Multi-currency support for <i>any</i> real or virtual currency. Dollars, euros, bitcoin, martian credits... you name it! Yes, cupcakes are valid, too!</li>
@@ -102,8 +102,8 @@
                 <div id="mc_embed_signup">
                     <form action="//bubeat.us10.list-manage.com/subscribe/post?u=8226b76f393681b072c2918c8&amp;id=153568b568" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
-                            <h2>The Empire needs YOU! <br/>Get all the juicy stories!<br/>
-                                <small><i>written by the Dark Lord himself</i></small>
+                            <h2>The Empire needs YOU! <br/>Reserve your spot for the coming beta!<br/>
+                                <small><i>guaranteed by the Dark Lord himself</i></small>
                             </h2>
 
                             <div class="form-group">
