--- a/index.html
+++ b/index.html
@@ -1,1 +1,181 @@
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title> MarketKPI - The easy way to track KPIs for your marketplace </title>
+	<meta name="description" content="Real-time strategic insights for decision makers" />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>-->
+    <link rel="stylesheet" href="style.css">
+
+
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        //  ga('create', 'UA-64005919-1', 'auto');
+        // ga('send', 'pageview');
+
+    </script>
+</head>
+<body>
+    <div class="logo" id="top">
+        <img src="logo2.svg" width="150" height="30" />
+        <span class="text-hide">
+            MarketKPI
+        </span>
+    </div>
+<header>
+   
+   
+        <h1>The easy way to track KPIs for your marketplace</h1>
+        <p>Relevant business insights for decision makers</p>
+    
+</header>
+<main class="container-fluid">
+
+    <div class="row">
+        <div class="col-xs-12 col-md-6 col-md-offset-3">
+            <section class="newsletter">
+
+                <h3 class="hide">Beta Sign Up</h3>
+
+                <form id="subscribe" action="//marketkpi.us10.list-manage.com/subscribe/post?u=8226b76f393681b072c2918c8&amp;id=153568b568" method="POST" target="_blanc">
+                    <label id="EMAIL-error" class="error hide" for="EMAIL">This field is required.</label>
+                    <input type="email" name="EMAIL" id="EMAIL" class="form-control" placeholder="Email" required/>
+                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_8226b76f393681b072c2918c8_153568b568" tabindex="-1" value=""></div>
+                    <button class="btn btn-primary">Sign me up for Beta!</button>
+
+                </form>
+
+
+
+            </section>
+        </div>
+    </div>
+
+    <section class="faq">
+        <div class="what-is">
+            <h2>What is MarketKPI</h2>
+            <p class="center-block">
+                MarketKPI is a scalable cloud powered event-based analytics tool as a service with a noble purpose: to track in real time all relevant business indicators that will help you
+                to understand your marketplace better. You'll get insights that will tell you if the business is thriving or dying, as well as data that will
+                help you optimize the pricing and the cash-flow.
+            </p>
+
+        </div>
+        <h2>We carefully identified KPIs for the following business models</h2>
+
+        <div class="row">
+            <div class="col-xs-12 col-md-4 col-md-offset-2">
+                <div class="profile commerce">
+                    <span class="icon flaticon-shopping122"></span>
+
+                    E-Commerce Platform
+                    <i class="ex">Ex: Shopify, Etsy etc</i>
+
+                </div>
+
+            </div>
+
+            <div class="col-xs-12 col-md-4">
+                <div class="profile jobs">
+                    <span class="icon flaticon-painter5"></span>
+                    Tasks & On-Demand Services
+                    <i class="ex">Ex: Fiverr, Homejoy, Uber, Task Rabbit etc</i>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12 col-md-4 col-md-offset-2">
+                <div class="profile crowd">
+                    <span class="icon flaticon-online22"></span>
+                    Crowdsourcing
+                    <i class="ex">
+                        Ex: 99designs, Crowdspring
+                    </i>
+
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-md-4">
+                <div class=" profile auction">
+                    <span class="icon flaticon-hand132"></span>
+                    Reverse auction (sellers bid on a job)
+                    <i class="ex">Ex: Elance,Thumbtack</i>
+                </div>
+            </div>
+        </div>
+
+
+        <h2>Easy Integration with our open source Events API Client </h2>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 col-xs-12 text-center">
+                <ul class="list-inline languages">
+                    <li>
+                        <i class="icon-csharp"></i> .Net
+                    </li>
+                    <li>
+                        <i class="icon-ruby"></i> ruby
+                    </li>
+                    <li>
+                        <i class="icon-php"></i> php
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </section>
+   
+</main>
+    <div class="text-center">
+        <a id="go-join" href="#" class="btn btn-primary">Join Beta</a>
+    </div>
+	<footer>
+	    &copy; MarketKPI , 2015
+        <div>Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
+	</footer>
+<script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/jquery.validate.min.js"></script>
+<script>
+    $(function() {
+        $("form").validate();
+        $("#go-join").click(function(ev) {
+
+            $('html, body').animate({
+                scrollTop: $("#top").offset().top
+            }, 300);
+            
+            $("input#EMAIL").focus();
+
+            ev.preventDefault();
+        });
+    });
+</script>
+</body>
+</html>
