--- a/index.html
+++ b/index.html
@@ -39,24 +39,28 @@
                 m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-64005919-1', 'auto');
-        ga('send', 'pageview');
+     //   ga('create', 'UA-64005919-1', 'auto');
+       // ga('send', 'pageview');
 
     </script>
 </head>
 <body>
-    <div class="logo" id="top">
-        <img src="logo2.svg" width="150" height="30" />
-        <span class="text-hide">
+
+<section class="blog">
+    <a class="btn btn-primary" href="http://blog.marketkpi.com">Blog: Journey To 100 Customers</a>
+</section>
+<div class="logo" id="top">
+    <img src="logo2.svg" width="150" height="30"/>
+    <span class="text-hide">
             MarketKPI
         </span>
-    </div>
+</div>
 <header>
-   
-   
-        <h1>The easy way to track KPIs for your marketplace</h1>
-        <p>Relevant business insights for decision makers</p>
-    
+
+
+    <h1>The easy way to track KPIs for your marketplace</h1>
+    <p>Relevant business insights for decision makers</p>
+
 </header>
 <main class="container-fluid">
 
@@ -69,7 +73,8 @@
                 <form id="subscribe" action="//marketkpi.us10.list-manage.com/subscribe/post?u=8226b76f393681b072c2918c8&amp;id=153568b568" method="POST" target="_blanc">
                     <label id="EMAIL-error" class="error hide" for="EMAIL">This field is required.</label>
                     <input type="email" name="EMAIL" id="EMAIL" class="form-control" placeholder="Email" required/>
-                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_8226b76f393681b072c2918c8_153568b568" tabindex="-1" value=""></div>
+                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_8226b76f393681b072c2918c8_153568b568" tabindex="-1" value="">
+                    </div>
                     <button class="btn btn-primary">Sign me up for Beta!</button>
 
                 </form>
@@ -153,15 +158,16 @@
         </div>
 
     </section>
-   
+
 </main>
-    <div class="text-center">
-        <a id="go-join" href="#" class="btn btn-primary">Join Beta</a>
+<div class="text-center">
+    <a id="go-join" href="#" class="btn btn-primary">Join Beta</a>
+</div>
+<footer>
+    &copy; MarketKPI , 2015
+    <div>Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
     </div>
-	<footer>
-	    &copy; MarketKPI , 2015
-        <div>Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
-	</footer>
+</footer>
 <script src="http://cdn.jsdelivr.net/jquery.validation/1.13.1/jquery.validate.min.js"></script>
 <script>
     $(function() {
@@ -171,7 +177,7 @@
             $('html, body').animate({
                 scrollTop: $("#top").offset().top
             }, 300);
-            
+
             $("input#EMAIL").focus();
 
             ev.preventDefault();
